fix: videos were showing a weird li'l gap below them :shrug:

--- a/_scss/_grid.scss
+++ b/_scss/_grid.scss
@@ -17,8 +17,13 @@ $gutter: 20px;
   column-gap: $gutter;
   align-items: flex-start;
 
-  img, video {
+  img {
     width: 100%;
+  }
+
+  video {
+    width: 100%;
+    display: inherit;
   }
 }
 
